force-app/main/default/objects/lwapic__Integration_Action__c/lwapic__Integration_Action__c.object-meta.xml
<CustomObject>
    <description>This object is going to be used for handling multiple response sections. Eg: Create/Update a record and then publish a platform event etc.</description>
    <label>Integration Action</label>
    <nameField>
        <displayFormat>ICA-{YYMMDD}-{0}</displayFormat>
        <label>Action No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>