force-app/main/default/objects/lwapic__Integration_Action__c/fields/lwapic__Chaining_Integration_Channel__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Chaining_Integration_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select another Integration Channel to execute</inlineHelpText>
    <label>Related Integration Channel</label>
    <referenceTo>lwapic__Integration_Channel__c</referenceTo>
    <relationshipLabel>Integration Actions (Related Integration Channel)</relationshipLabel>
    <relationshipName>Chaining_Integration_Channel</relationshipName>
    <type>Lookup</type>
</CustomField>