force-app/main/default/objects/lwapic__Integration_Action__c/fields/lwapic__Data_Separator__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Data_Separator__c</fullName>
    <description>This field is being used internally to separate the response data.</description>
    <inlineHelpText>Provide the separator based on the response data type and format. Ignore if the data type is JSON.</inlineHelpText>
    <label>Data Separator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>lwapic__Data_Separator</valueSetName>
    </valueSet>
</CustomField>