force-app/main/default/objects/lwapic__Integration_Action__c/fields/lwapic__Description__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>