force-app/main/default/objects/lwapic__Integration_Action__c/fields/lwapic__Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Handler_Name__c</fullName>
    <description>Please provide the name of the action handler. E.g. Notification__e,Account etc. Provide Attachment or ContentVersion for File Type.</description>
    <inlineHelpText>Provide Action Handler Name. Based on action types. For the class - provide apex class name, for objects - provide object name.</inlineHelpText>
    <label>Action Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>