force-app/main/default/objects/lwapic__Integration_Action__c/fields/lwapic__Integration_Channel__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Integration_Channel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Parent Integration Channel</inlineHelpText>
    <label>Parent Integration Channel</label>
    <referenceTo>lwapic__Integration_Channel__c</referenceTo>
    <relationshipLabel>Integration Actions</relationshipLabel>
    <relationshipName>Integration_Actions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>