force-app/main/default/objects/lwapic__Integration_Action__c/fields/lwapic__Mapping__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Mapping__c</fullName>
    <description>Provide the mapping for the response body.</description>
    <inlineHelpText>Response Data Mapper. Use JSON Path,  formulas, merge fields as needed.</inlineHelpText>
    <label>Response Data Mapper</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>