force-app/main/default/objects/lwapic__Integration_Action__c/fields/lwapic__Order__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>It identifies the order of actions to be performed</description>
    <inlineHelpText>Provide the order number to execute sequentially.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>