force-app/main/default/objects/lwapic__Integration_Action__c/fields/lwapic__Type__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Type__c</fullName>
    <description>This is a type of response handler. Select Type along with Handler Name</description>
    <inlineHelpText>Choose the action type to handle the response data.</inlineHelpText>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SObject</fullName>
                <default>true</default>
                <label>SObject</label>
            </value>
            <value>
                <fullName>Custom Class</fullName>
                <label>Apex Class</label>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Platform Events</fullName>
            </value>
            <value>
                <fullName>Chaining</fullName>
                <label>Integration Channel</label>
            </value>
            <value>
                <fullName>Custom Settings</fullName>
            </value>
            <value>
                <fullName>Custom Metadata Types</fullName>
            </value>
            <value>
                <fullName>External Object</fullName>
            </value>
            <value>
                <fullName>Big Object</fullName>
            </value>
            <value>
                <fullName>Client Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>