force-app/main/default/objects/lwapic__Integration_Action__c/validationRules/lwapic__Action_Type_Handler_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>lwapic__Action_Type_Handler_Validation</fullName>
    <active>true</active>
    <description>Action Handler to be defined properly as per the action type</description>
    <errorConditionFormula>AND
  
( ISPICKVAL(lwapic__Type__c, &quot;Chaining&quot;), ISBLANK(lwapic__Chaining_Integration_Channel__c) )</errorConditionFormula>
    <errorDisplayField>lwapic__Chaining_Integration_Channel__c</errorDisplayField>
    <errorMessage>Integration Channel must be provided for &quot;Integration Channel&quot; action type</errorMessage>
</ValidationRule>