force-app/main/default/objects/lwapic__Integration_Action__c/validationRules/lwapic__Action_Type_Handler_Validation2.validationRule-meta.xml
<ValidationRule>
    <fullName>lwapic__Action_Type_Handler_Validation2</fullName>
    <active>true</active>
    <description>Action Handler Validation for all action types</description>
    <errorConditionFormula>AND(

 NOT( OR(ISPICKVAL( lwapic__Type__c , &quot;Chaining&quot;),ISPICKVAL( lwapic__Type__c , &quot;Client Response&quot;))) , 

 ISBLANK(lwapic__Handler_Name__c) 

)</errorConditionFormula>
    <errorDisplayField>lwapic__Handler_Name__c</errorDisplayField>
    <errorMessage>Action Handler is required for all action types other than &quot;Integration Channel&quot;</errorMessage>
</ValidationRule>