force-app/main/default/objects/lwapic__Integration_Action__c/validationRules/lwapic__Validate_Recursive_Intergration_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>lwapic__Validate_Recursive_Intergration_Channel</fullName>
    <active>true</active>
    <description>Check and protect recursion of integration channels</description>
    <errorConditionFormula>lwapic__Integration_Channel__c =  lwapic__Chaining_Integration_Channel__c</errorConditionFormula>
    <errorDisplayField>lwapic__Chaining_Integration_Channel__c</errorDisplayField>
    <errorMessage>Related Integration Channel must be different than parent integration channel to avoid the recursion.</errorMessage>
</ValidationRule>